Added button to export memory

--- a/src/ui/debugger/DebuggerWindow.ui
+++ b/src/ui/debugger/DebuggerWindow.ui
@@ -335,8 +335,22 @@
     <number>8</number>
    </attribute>
    <widget class="QWidget" name="dockWidgetContents">
-    <layout class="QGridLayout" name="gridLayout_6">
-     <item row="1" column="0">
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QComboBox" name="cmbMemoryType"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnExportMemory">
+         <property name="text">
+          <string>Export</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
       <widget class="QTableView" name="memoryView">
        <property name="minimumSize">
         <size>
@@ -345,9 +359,6 @@
         </size>
        </property>
       </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QComboBox" name="cmbMemoryType"/>
      </item>
     </layout>
    </widget>
