--- a/src/ui/InfoWindow.ui
+++ b/src/ui/InfoWindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1160</width>
+    <width>1306</width>
     <height>860</height>
    </rect>
   </property>
@@ -16,8 +16,11 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="tabTiles">
       <attribute name="title">
@@ -748,57 +751,40 @@
       <attribute name="title">
        <string>Sprites</string>
       </attribute>
-      <widget class="QGraphicsView" name="gvObjTable1">
-       <property name="geometry">
-        <rect>
-         <x>50</x>
-         <y>260</y>
-         <width>431</width>
-         <height>431</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QGraphicsView" name="gvObjTable2">
-       <property name="geometry">
-        <rect>
-         <x>510</x>
-         <y>260</y>
-         <width>431</width>
-         <height>431</height>
-        </rect>
-       </property>
-      </widget>
       <widget class="QGroupBox" name="groupBox_7">
        <property name="geometry">
         <rect>
-         <x>20</x>
+         <x>10</x>
          <y>10</y>
-         <width>221</width>
-         <height>131</height>
+         <width>531</width>
+         <height>161</height>
         </rect>
        </property>
        <property name="title">
         <string>Sprite Info</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_8">
-        <item row="0" column="1">
-         <widget class="QLabel" name="labelObjTable1Addr">
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_37">
+          <property name="text">
+           <string>Table 2 Address</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QLabel" name="labelObjSizes">
           <property name="text">
            <string>TextLabel</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_33">
+        <item row="0" column="2">
+         <widget class="QCheckBox" name="chkSpriteLive">
           <property name="text">
-           <string>Table 1 Address</string>
+           <string>Live</string>
           </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_37">
-          <property name="text">
-           <string>Table 2 Address</string>
+          <property name="checked">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -809,6 +795,16 @@
           </property>
          </widget>
         </item>
+        <item row="0" column="3">
+         <widget class="QPushButton" name="btnSpriteUpdate">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+          <property name="text">
+           <string>Update</string>
+          </property>
+         </widget>
+        </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_40">
           <property name="text">
@@ -816,12 +812,65 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
-         <widget class="QLabel" name="labelObjSizes">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_33">
+          <property name="text">
+           <string>Table 1 Address</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLabel" name="labelObjTable1Addr">
           <property name="text">
            <string>TextLabel</string>
           </property>
          </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="label_39">
+          <property name="text">
+           <string>Palette</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QComboBox" name="cmbSpritePalette"/>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QGroupBox" name="groupBox_8">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>180</y>
+         <width>461</width>
+         <height>481</height>
+        </rect>
+       </property>
+       <property name="title">
+        <string>Lower Table</string>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_10">
+        <item row="0" column="0">
+         <widget class="QGraphicsView" name="gvObjTable1"/>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QGroupBox" name="groupBox_9">
+       <property name="geometry">
+        <rect>
+         <x>470</x>
+         <y>180</y>
+         <width>461</width>
+         <height>481</height>
+        </rect>
+       </property>
+       <property name="title">
+        <string>Upper Table</string>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_11">
+        <item row="0" column="0">
+         <widget class="QGraphicsView" name="gvObjTable2"/>
         </item>
        </layout>
       </widget>
