--- a/src/ui/LogWindow.ui
+++ b/src/ui/LogWindow.ui
@@ -20,17 +20,10 @@
       <string>Log Level</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="2">
-       <widget class="QRadioButton" name="rbInfo">
+      <item row="1" column="1">
+       <widget class="QCheckBox" name="chkPpu">
         <property name="text">
-         <string>&amp;Info</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="3">
-       <widget class="QRadioButton" name="rbDebug">
-        <property name="text">
-         <string>&amp;Debug</string>
+         <string>PPU</string>
         </property>
        </widget>
       </item>
@@ -38,34 +31,6 @@
        <widget class="QCheckBox" name="chkTimer">
         <property name="text">
          <string>Timer</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QRadioButton" name="rbError">
-        <property name="text">
-         <string>&amp;Error</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="5">
-       <widget class="QCheckBox" name="chkInterrupt">
-        <property name="text">
-         <string>Interrupt</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QRadioButton" name="rbWarning">
-        <property name="text">
-         <string>&amp;Warning</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="3">
-       <widget class="QCheckBox" name="chkInput">
-        <property name="text">
-         <string>Input</string>
         </property>
        </widget>
       </item>
@@ -83,10 +48,31 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QCheckBox" name="chkPpu">
+      <item row="1" column="3">
+       <widget class="QCheckBox" name="chkInput">
         <property name="text">
-         <string>PPU</string>
+         <string>Input</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="7">
+       <widget class="QCheckBox" name="chkDma">
+        <property name="text">
+         <string>DMA</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="5">
+       <widget class="QCheckBox" name="chkInterrupt">
+        <property name="text">
+         <string>Interrupt</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QRadioButton" name="rbError">
+        <property name="text">
+         <string>&amp;Error</string>
         </property>
        </widget>
       </item>
@@ -97,6 +83,20 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="3">
+       <widget class="QRadioButton" name="rbDebug">
+        <property name="text">
+         <string>&amp;Debug</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QRadioButton" name="rbWarning">
+        <property name="text">
+         <string>&amp;Warning</string>
+        </property>
+       </widget>
+      </item>
       <item row="1" column="2">
        <widget class="QCheckBox" name="chkMemory">
         <property name="text">
@@ -104,10 +104,17 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="7">
-       <widget class="QCheckBox" name="chkDma">
+      <item row="0" column="2">
+       <widget class="QRadioButton" name="rbInfo">
         <property name="text">
-         <string>DMA</string>
+         <string>&amp;Info</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QCheckBox" name="chkSpc700">
+        <property name="text">
+         <string>SPC700</string>
         </property>
        </widget>
       </item>
