--- a/src/ui/LogWindow.ui
+++ b/src/ui/LogWindow.ui
@@ -118,6 +118,13 @@
         </property>
        </widget>
       </item>
+      <item row="2" column="1">
+       <widget class="QCheckBox" name="chkSpcMem">
+        <property name="text">
+         <string>SPC Mem</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
