--- a/src/ui/LogWindow.ui
+++ b/src/ui/LogWindow.ui
@@ -125,6 +125,13 @@
         </property>
        </widget>
       </item>
+      <item row="2" column="2">
+       <widget class="QCheckBox" name="chkSpcTimer">
+        <property name="text">
+         <string>SPC Timer</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
